# ocssw-src

./: CMakeLists.txt  README.md
cmake/Modules/: FindCheck.cmake  FindFann.cmake  FindGeoTIFF.cmake  FindHDFEOS.cmake  FindHDFEOS5.cmake  FindHealpix.cmake  FindJansson.cmake  FindLevmar.cmake  FindLibBilio.cmake  FindLibL2.cmake  FindLibNovas.cmake  FindLibOsmi.cmake  FindLibSGP4.cmake  FindLibSeawifs.cmake  FindLibViirsCal.cmake  FindLibViirsCmn.cmake  FindLibViirsL1BCal.cmake  FindLibViirsRice.cmake  FindMapi.cmake  FindOpenJP2.cmake  FindPGSTK.cmake  FindProj4.cmake  FindSDST.cmake  FindValgrind.cmake
include/: ancproto.h  imgtypes.h  l1io.h  l2_proto.h  map.h  mapproto.h  mapproto_o.h  oc.hpp  olog.h  readL2scan_viirs.h  val_extract.h
include/oc/: Configuration.hpp  CoreModule.hpp  DataProvider.hpp  DataRecord.hpp  KvStore.hpp  Module.hpp  Stopwatch.hpp  TimePoint.hpp
oel_hdf4/: CMakeLists.txt
oel_hdf4/libbin/: CMakeLists.txt  L3BinShape.cpp  L3BinShape.h  L3BinShapeSMI.cpp  L3BinShapeSMI.h  L3File.cpp  L3File.h  L3FileSMI.cpp  bin_csub64.c  bin_io.cpp  bin_util.cpp  bin_util.h  get_beg_ext64.c  getl3b.h  getl3b64.h  getl3b_misc.c  getl3b_misc64.c  hdf_bin.h  l3b_misc.c  l3b_misc64.c  meta_l3b.h  meta_l3b64.h  ncdfbin_utils.c  put_l3b.c  put_l3b64.c  read_l3b_meta.c  read_l3b_meta64.c  seabin.h  seabin64.h  seaproto64.h  seaprotoi.h  seaprotoi64.h  write_l3b_meta.c  write_l3b_meta64.c
oel_hdf4/libdfutils/: CMakeLists.txt  dfutils.h  scale_sds.c  wrapper.c
oel_hdf4/libh4metadata/: CMakeLists.txt
oel_hdf4/libhdf4utils/: CMakeLists.txt  hdf4_utils.c  hdf4utils.h  hdf_utils.c
oel_hdf4/libhdf5utils/: CMakeLists.txt  hdf5util.cpp  hdf5utils.h
oel_hdf4/libnav/: CMakeLists.txt  get_zenaz.c  libnav.h
oel_util/: .gitignore  CMakeLists.txt
oel_util/cmake/Modules/: FindJansson.cmake  FindLibGenutils.cmake  FindLibNetcdfutils.cmake  FindLibPiutils.cmake  FindLibTimeutils.cmake  FindNetCDF.cmake  FindPugiXML.cmake  SvnRevisionFile.cmake  cdata
oel_util/libgenutils/: CMakeLists.txt  alloc_2d.c  alloc_2d.h  alloc_2d.pl  allocate2d.c  allocate2d.h  allocate2d.pl  allocate3d.c  allocate3d.h  allocate3d.pl  argpar.c  argpar.h  clo.c  fileFormatUtils.c  genutils.h  olog-main.c  olog.c  olog.h  vincenty.c
oel_util/libnetcdfutils/: CMakeLists.txt  nc_gridutils.c
oel_util/libpiutils/: CMakeLists.txt  getDOI.cpp  productInfo.cpp  productInfo.h  sensorDefs.h  sensorInfo.c
oel_util/libtimeutils/: CMakeLists.txt
oel_util/tests/: CMakeLists.txt
oel_util/tests/argpar/: CMakeLists.txt
src/: CMakeLists.txt
src/ancnrt/: ANCroutines.c  CMakeLists.txt  ancil.h  ancnrt.c  ancnrt_2p5.c  ancnrt_proto.h  countann.c  fill_smooth.c  fillenv.c  o3_toms.c  o3_toms.h  o3nrt_omi.c  rd_toms_ascii.c  rdattr.c  rdsdsid.c  readgrib.c  world_avg.c
src/atteph_info_modis/: CMakeLists.txt
src/calibrate_viirs/: CMakeLists.txt  Calibrate_Viirs.cpp  Changelog.md  calViirs.c  calibrate_viirs.h  calibrate_viirs_input.cpp
src/filetype/: CMakeLists.txt  filetype.c  filetype.h  filetypeXml.cpp
src/geocheck_modis/: CMakeLists.txt  geocheck_modis.c
src/geogen_hico/: CMakeLists.txt  makefile
src/geogen_modis/: CMakeLists.txt
src/geolocate_viirs/: CMakeLists.txt  Geolocate_Viirs_Driver.cpp  geolocate_viirs.h  geolocate_viirs_input.cpp
src/get_product_info/: CMakeLists.txt
src/h5io/: CMakeLists.txt
src/hico_utils/: CMakeLists.txt  hico.h  hico_L0_hdr_echo.c  hico_hs.h  hico_hs_stats.c  time_offset.c
src/ice2hdf/: CMakeLists.txt
src/l0chunk_modis/: CMakeLists.txt
src/l0cnst_write_modis/: CMakeLists.txt
src/l0fix_modis/: CMakeLists.txt
src/l0regen_seawifs/: CMakeLists.txt
src/l1aextract_modis/: CMakeLists.txt  MODll2snpx.c
src/l1agen_viirs/: CMakeLists.txt  Usds.c  createNCDF_viirs.cpp  l1aFile.cpp  l1aextract_viirs.cpp  l1agen_viirs.cpp  l1agen_viirs.h  rice.c  scpad_viirs.cpp  scpad_viirs_lsips.cpp
src/l1bextract_meris/: CMakeLists.txt  l1bextract_meris.cpp
src/l2bin/: CMakeLists.txt  Changelog.md  cdata.h  dataday.c  dataday.h  l2bin.c  l2bin_input.c  l2bin_input.h
src/l2brsgen/: CMakeLists.txt  (+3 more)
src/l2gen/: CMakeLists.txt  Changelog.md  HOWTO_Add_a_product.txt  HOWTO_Add_a_sensor.txt  KDtree.c  KDvector.h  aerosol.c  alloc_l1.c  alloc_l2.c  anc_acq.c  atmocor1.c  atmocor2.c  atrem_corl1.h  atrem_corl1v2.h  atrem_corl1v3.h  b128_msk_get.c  bin_climatology.c  bioOptBandShift.c  brightness.c  calcite.c  calfile_utils.c  calfile_utils.h  cdom_mannino.c  cdom_morel.c  cloud_flag.c  convert_band.c  convl12.c  convl21.c  covariance_inversion.c  cpl1rec.c  filehandle.h  filehandle_init.c  filter.c  fluorescence.c  fresnel.c  fuzzy_func_v3.c  gas_trans.c  geom_per_band.c  get_atrem_corl1v3.c  get_chl.c  (+166 more)
src/l3mapgen/: CMakeLists.txt  Changelog.md  OutFile.cpp  OutFile.h  l3mapgen.cpp  l3mapgen_input.cpp
src/libbilio/: CMakeLists.txt  aviris.h  jplaeriallib.h  prism.h  read_aviris.c  read_prism.c
src/libgoci/: CMakeLists.txt  goci.c  goci.h  goci_slot.c
src/libl2/: CMakeLists.txt  readL2scan.c  readL2scan.h
src/oc/: CMakeLists.txt  scratchpad.md
src/oc/include/oc/: Algorithm.hpp  Commands.hpp  Configuration.hpp.in  DatFile.hpp  FileReader.hpp  FilterIterator.hpp  LeapSecondDatabase.hpp  Log.hpp  ModuleManager.hpp  Product.hpp  ShareTree.hpp  StringUtils.hpp  Variable.hpp
src/oc/include/oc/log/: Base.hpp  File.hpp  FormattedStream.hpp  Stream.hpp
src/oc/po/: es.po  messages.po
src/oc/src/: Algorithm.cpp  CoreModule.cpp  DatFile.cpp  FileReader.cpp  KvStore.cpp  LeapSecondDatabase.cpp  Log.cpp  MasterCommand.cpp  Module.cpp  ModuleManager.cpp  ShareTree.cpp  StringUtils.cpp  TimePoint.cpp
src/oc/src/command/: Help.cpp  ListCommands.cpp  ListModules.cpp
src/oc/src/log/: File.cpp  FormattedFile.cpp  FormattedStream.cpp  Stream.cpp
src/oc/tests/: CDataList.txt  CMakeLists.txt  boost_datetime.cpp  boost_units.cpp  class_pointer_testing.cpp  datfile.cpp  file_reader.cpp  filter_iterator.cpp  kvstore.cpp  leap_second_database.cpp  logger.cpp  measurement.hpp  netcdf_testing.cpp  product_testing.cpp  share_tree.cpp  stopwatch.cpp  string_utils.cpp  time_point.cpp
(+114 files in other folders)
